# revature-ml-training

./: fastapi_main.py  kfdemo.py  pipeline.yaml  pyproject.toml
todo_list/: CustomMiddleware.py  Readme.md  db.sql
todo_list/db/: authenticate_db.py  session_local.py  todo_db.py
todo_list/db/model/: authenticate.py  todo.py
todo_list/requests/: todo.py
todo_list/resonses/: all_tasks_response.py  create_task_response.py
todo_list/routers/: default_router.py  tasks_router.py
todo_list/services/: authentication_svc.py  todo_svc.py
